--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>我的网站</title>
-	<link rel="stylesheet" href="template">
+	<link rel="stylesheet" href="start">
 </head>
 <body>
 	<div class="bg-img"></div>
 	<header>我的网站</header>
 	<main>
-		<h1>Hello, World!</h1>
-		<p>这是由热铁盒网页托管创建的默认页面。</p>
+		<h1>WARNING!</h1>
+		<p>苏旭昶提醒你，请勿随意访问陌生链接。</p>
 	</main>
 </body>
 </html>
