--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<title>我的网站</title>
+	<title>警告</title>
 	<link rel="stylesheet" href="start">
 </head>
 <body>
-	<div class="bg-img"></div>
-	<header>我的网站</header>
-	<main>
+	<div>
 		<h1>WARNING!</h1>
 		<p>苏旭昶提醒你，请勿随意访问陌生链接。</p>
-	</main>
+	</div>
 </body>
 </html>
