--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<title>警告</title>
+	<title>不是哥们</title>
 	<link rel="stylesheet" href="start">
 </head>
 <body>
