--- a/20241208/mod_download.html
+++ b/20241208/mod_download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="20241208.css">
-    <title>Shader Downloading</title>
+    <title>MOD Downloading</title>
 </head>
 <body>
 <script>
