--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 						<input type="checkbox">记住密码
 						<a href="forget.html">忘记密码</a>
 					</div>
-					<button type="submit">快 点 端 上 来 吧</button>
+					<button type="submit">你 还 真 扫 手 册 了</button>
 					<div class="register">
 						<p>没有账号？<a href="signup.html">点我去注册</a></p>
 					</div>
